@@ -158,7 +158,7 @@ function checkV(e)
 function openEditWindow() 
 {
 	//alert("editUrl:" + editUrl);
-	details = "'width=500,height=700,left=" + (document.body.clientWidth / 4) + ",top=" + (document.body.clientHeight / 4) + ",toolbar=no,status=no,scrollbars=yes,location=no,menubar=no,directories=no,resizable=yes'";
+	details = "'width=500,height=700,left=" + (document.body.clientWidth / 4) + ",top=100,toolbar=no,status=no,scrollbars=yes,location=no,menubar=no,directories=no,resizable=yes'";
 	newWin=window.open(editUrl, "Edit", details);
 	newWin.focus();
 }
